    for the patch. Closes: #597651
  * With "3.0 (quilt)" source package, create .pc/.quilt_series with the
    correct series file if the source package provides vendor specific patch
    sets.

  [ Guillem Jover ]
  * Disable by default usage of synchronous sync(2), as it causes undesired
    I/O on unrelated file systems. Closes: #588339, #595927, #600075

  [ Updated man page translations ]
  * French (Christian Perrier). Including a typo fix
    and a typographical change reported by Vincent Danjean
    Closes: #601852
  * Spanish (Omar Campagne). Closes: #596519

  [ Updated programs translations ]
  * German (Sven Joachim). Improved by Holger Wansing.
  * Portuguese (Miguel Figueiredo). Closes: #596168
  * Russian (Yuri Kozlov). Closes: #595455
  * Vietnamese (Clytie Siddall). Closes: #598473
  * Basque (Iñaki Larrañaga Murgoitio). Closes: #599923
  * Danish (Ask Hjorth Larsen). Closes: #600240
  * Catalan (Jordi Mallach).
  * Fix translation of "however" in Italian. Thanks to Pietro Battiston
    Closes: #602518
  * Romanian (Andrei POPESCU). Closes: #604769

  [ Updated scripts translations ]
  * German (Sven Joachim).
  * Catalan (Jordi Mallach).

  [ Updated dselect translations ]
  * Catalan (Jordi Mallach).
  * German (Sven Joachim).

 -- Christian Perrier <bubulle@debian.org>  Tue, 14 Sep 2010 20:18:03 +0200

dpkg (1.15.8.5) unstable; urgency=low

  [ Guillem Jover ]
  * Do not print a warning when parsing status or status log files on
    half-installed packages w/o a Description or Maintainer field, as
    this happens normally when the package was never installed before.
    Closes: #594167
  * Improve git format documentation in dpkg-source(1).
    Thanks to Joey Hess, based on a patch by Tanguy Ortolo.
  * Clarify effect of “dpkg --purge” on homedir files in dpkg(1).
    Thanks to The Fungi <fungi@yuggoth.org>. Closes: #593628
  * Add gettext plurals infrastructure support.
  * Add gettext messages for plural forms. Closes: #594218