@@ -14,6 +14,8 @@ dpkg (1.15.8.6) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Disable by default usage of synchronous sync(2), as it causes undesired
     I/O on unrelated file systems. Closes: #588339, #595927, #600075
+  * Add new --force-unsafe-io to disable safe I/O operations on unpack.
+    Closes: #584254
 
   [ Updated man page translations ]
   * French (Christian Perrier). Including a typo fix
